// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImageBackground - Snapshots > matches snapshot with default props 1`] = `
<div
  class="fixed inset-0 bg-cover bg-center bg-no-repeat -z-10"
  data-testid="image-background"
  style="background-image: url(\\"/bg-image.jpg\\");"
/>
`;

exports[`ImageBackground - Snapshots > matches snapshots for additional props 1`] = `
<div
  class="fixed inset-0 bg-cover bg-center bg-no-repeat -z-10"
  data-testid="image-background"
  id="background-id"
  style="background-image: url(\\"/bg.jpg\\");"
/>
`;

exports[`ImageBackground - Snapshots > matches snapshots for additional props 2`] = `
<div
  class="fixed inset-0 bg-cover bg-center bg-no-repeat -z-10"
  data-testid="image-background"
  style="background-image: url(\\"/bg.jpg\\");"
/>
`;

exports[`ImageBackground - Snapshots > matches snapshots for different configurations 1`] = `
<div
  class="fixed inset-0 bg-cover bg-center bg-no-repeat -z-10"
  data-testid="image-background"
  style="background-image: url(\\"/default-bg.jpg\\");"
/>
`;

exports[`ImageBackground - Snapshots > matches snapshots for different configurations 2`] = `
<div
  class="fixed inset-0 bg-cover bg-center bg-no-repeat -z-10 custom-bg"
  data-testid="image-background"
  style="background-image: url(\\"/custom-bg.jpg\\");"
/>
`;

exports[`ImageBackground - Snapshots > matches snapshots for different image types 1`] = `
<div
  class="fixed inset-0 bg-cover bg-center bg-no-repeat -z-10"
  data-testid="image-background"
  style="background-image: url(\\"/background.jpg\\");"
/>
`;

exports[`ImageBackground - Snapshots > matches snapshots for different image types 2`] = `
<div
  class="fixed inset-0 bg-cover bg-center bg-no-repeat -z-10"
  data-testid="image-background"
  style="background-image: url(\\"/background.png\\");"
/>
`;

exports[`ImageBackground - Snapshots > matches snapshots for different image types 3`] = `
<div
  class="fixed inset-0 bg-cover bg-center bg-no-repeat -z-10"
  data-testid="image-background"
  style="background-image: url(\\"/background.svg\\");"
/>
`;
